--- a/WingMate_iOS/View Controllers/Dashboard/DashboardVC.xib
+++ b/WingMate_iOS/View Controllers/Dashboard/DashboardVC.xib
@@ -47,7 +47,7 @@
                         <constraint firstAttribute="height" constant="50" id="UUw-CA-VG8"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                    <state key="normal" title="Photo / Video">
+                    <state key="normal" title="Profile">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <userDefinedRuntimeAttributes>
