--- a/WingMate_iOS/View Controllers/Option Selection/OptionSelectionVC.xib
+++ b/WingMate_iOS/View Controllers/Option Selection/OptionSelectionVC.xib
@@ -16,11 +16,15 @@
                 <outlet property="buttonContinue" destination="ja1-Ng-e7S" id="KS1-kI-hUS"/>
                 <outlet property="constraintHeightSearchView" destination="MCs-Uf-9IE" id="9pa-s6-DDP"/>
                 <outlet property="constraintTopSearchView" destination="q1q-0H-5AI" id="HCg-d5-ViW"/>
+                <outlet property="labelFemale" destination="88G-Zj-xAm" id="JgN-L0-7hV"/>
+                <outlet property="labelMale" destination="zgf-ux-vbQ" id="VZa-K4-dpC"/>
                 <outlet property="labelQuestion" destination="Lnx-Uk-wJv" id="DhM-Pg-cH4"/>
                 <outlet property="labelSubHeading" destination="IFh-zA-Ru5" id="sho-rQ-Tji"/>
                 <outlet property="tableViewOptions" destination="HTE-rM-x9b" id="wY4-jG-k6N"/>
                 <outlet property="textFieldSearch" destination="eIJ-lf-cX4" id="C2r-vr-Tqx"/>
                 <outlet property="view" destination="JwK-Gw-MSD" id="L0Q-CE-XV2"/>
+                <outlet property="viewBgFemale" destination="518-vO-j53" id="SBJ-zO-YfX"/>
+                <outlet property="viewBgMale" destination="bIa-nW-dla" id="POS-hS-jkf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -69,14 +73,72 @@
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="4Pp-5q-EtD">
                     <rect key="frame" x="20" y="20" width="72" height="72"/>
                 </imageView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="HTE-rM-x9b">
-                    <rect key="frame" x="20" y="228.66666666666666" width="374" height="389.33333333333337"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="uRC-Jr-6rF"/>
-                        <outlet property="delegate" destination="-1" id="CHN-3m-u3b"/>
-                    </connections>
-                </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="518-vO-j53">
+                    <rect key="frame" x="20.000000000000007" y="217" width="93.666666666666686" height="32.333333333333343"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Female" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="88G-Zj-xAm">
+                            <rect key="frame" x="23.999999999999996" y="7.9999999999999982" width="45.666666666666657" height="16.333333333333329"/>
+                            <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
+                            <color key="textColor" name="PurpleThemeColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlL-Ai-Hbq">
+                            <rect key="frame" x="0.0" y="0.0" width="93.666666666666671" height="32.333333333333336"/>
+                            <connections>
+                                <action selector="femaleButtonPressed:" destination="-1" eventType="touchUpInside" id="To9-hc-p6z"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" name="YellowThemeColor"/>
+                    <constraints>
+                        <constraint firstItem="nlL-Ai-Hbq" firstAttribute="top" secondItem="518-vO-j53" secondAttribute="top" id="0jH-dx-8Yz"/>
+                        <constraint firstAttribute="bottom" secondItem="88G-Zj-xAm" secondAttribute="bottom" constant="8" id="1eO-Hh-Gso"/>
+                        <constraint firstItem="nlL-Ai-Hbq" firstAttribute="leading" secondItem="518-vO-j53" secondAttribute="leading" id="Kb7-9V-PL1"/>
+                        <constraint firstAttribute="trailing" secondItem="nlL-Ai-Hbq" secondAttribute="trailing" id="VNH-uS-Nmr"/>
+                        <constraint firstAttribute="trailing" secondItem="88G-Zj-xAm" secondAttribute="trailing" constant="24" id="Xq7-vl-RCI"/>
+                        <constraint firstItem="88G-Zj-xAm" firstAttribute="top" secondItem="518-vO-j53" secondAttribute="top" constant="8" id="cVe-r4-SRt"/>
+                        <constraint firstAttribute="bottom" secondItem="nlL-Ai-Hbq" secondAttribute="bottom" constant="7.1054273576010019e-15" id="kW9-Rj-yZj"/>
+                        <constraint firstItem="88G-Zj-xAm" firstAttribute="leading" secondItem="518-vO-j53" secondAttribute="leading" constant="24" id="pxi-4H-QHI"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="6"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bIa-nW-dla">
+                    <rect key="frame" x="20" y="168.66666666666666" width="78.666666666666671" height="32.333333333333343"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Male" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgf-ux-vbQ">
+                            <rect key="frame" x="24" y="7.9999999999999982" width="30.666666666666671" height="16.333333333333329"/>
+                            <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
+                            <color key="textColor" name="PurpleThemeColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EnN-RB-ZLh">
+                            <rect key="frame" x="0.0" y="0.0" width="78.666666666666671" height="32.333333333333336"/>
+                            <connections>
+                                <action selector="maleButtonPressed:" destination="-1" eventType="touchUpInside" id="hNc-EY-gsj"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" name="YellowThemeColor"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="EnN-RB-ZLh" secondAttribute="trailing" id="H9R-Gv-g7c"/>
+                        <constraint firstAttribute="trailing" secondItem="zgf-ux-vbQ" secondAttribute="trailing" constant="24" id="Klf-SF-kmP"/>
+                        <constraint firstAttribute="bottom" secondItem="zgf-ux-vbQ" secondAttribute="bottom" constant="8" id="OSu-I2-bZi"/>
+                        <constraint firstAttribute="bottom" secondItem="EnN-RB-ZLh" secondAttribute="bottom" id="aZf-69-OqM"/>
+                        <constraint firstItem="EnN-RB-ZLh" firstAttribute="leading" secondItem="bIa-nW-dla" secondAttribute="leading" id="fDs-xP-TDM"/>
+                        <constraint firstItem="zgf-ux-vbQ" firstAttribute="leading" secondItem="bIa-nW-dla" secondAttribute="leading" constant="24" id="mb7-SL-ylg"/>
+                        <constraint firstItem="EnN-RB-ZLh" firstAttribute="top" secondItem="bIa-nW-dla" secondAttribute="top" id="qtI-Lu-slN"/>
+                        <constraint firstItem="zgf-ux-vbQ" firstAttribute="top" secondItem="bIa-nW-dla" secondAttribute="top" constant="8" id="tVi-yf-qDE"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="6"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0CG-Zy-UGB">
                     <rect key="frame" x="20" y="168.66666666666666" width="374" height="40"/>
                     <subviews>
@@ -91,6 +153,9 @@
                             <rect key="frame" x="40" y="0.0" width="334" height="40"/>
                             <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="2ZZ-QU-xCG"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -115,12 +180,22 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="HTE-rM-x9b">
+                    <rect key="frame" x="20" y="228.66666666666666" width="374" height="389.33333333333337"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="uRC-Jr-6rF"/>
+                        <outlet property="delegate" destination="-1" id="CHN-3m-u3b"/>
+                    </connections>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="H6J-4t-Fb5"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="bIa-nW-dla" firstAttribute="top" secondItem="IFh-zA-Ru5" secondAttribute="bottom" constant="20" id="0da-zl-zBw"/>
                 <constraint firstItem="IFh-zA-Ru5" firstAttribute="top" secondItem="Lnx-Uk-wJv" secondAttribute="bottom" constant="20" id="0r9-Yi-wVb"/>
                 <constraint firstItem="Sgo-2W-HqM" firstAttribute="width" secondItem="JwK-Gw-MSD" secondAttribute="width" multiplier="0.6" id="3px-ct-ZCi"/>
+                <constraint firstItem="518-vO-j53" firstAttribute="top" secondItem="bIa-nW-dla" secondAttribute="bottom" constant="16" id="5iE-Gd-2Ef"/>
                 <constraint firstItem="4Pp-5q-EtD" firstAttribute="top" secondItem="H6J-4t-Fb5" secondAttribute="top" constant="20" id="BFc-jD-dJs"/>
                 <constraint firstItem="HTE-rM-x9b" firstAttribute="leading" secondItem="H6J-4t-Fb5" secondAttribute="leading" constant="20" id="DII-pZ-NuK"/>
                 <constraint firstItem="H6J-4t-Fb5" firstAttribute="trailing" secondItem="0CG-Zy-UGB" secondAttribute="trailing" constant="20" id="DMW-AW-1KV"/>
@@ -129,6 +204,8 @@
                 <constraint firstItem="H6J-4t-Fb5" firstAttribute="trailing" secondItem="HTE-rM-x9b" secondAttribute="trailing" constant="20" id="Rlz-Fz-Pjd"/>
                 <constraint firstItem="Sgo-2W-HqM" firstAttribute="centerX" secondItem="JwK-Gw-MSD" secondAttribute="centerX" id="Zx6-zi-j0K"/>
                 <constraint firstItem="4Pp-5q-EtD" firstAttribute="leading" secondItem="H6J-4t-Fb5" secondAttribute="leading" constant="20" id="crt-Jh-ND1"/>
+                <constraint firstItem="518-vO-j53" firstAttribute="leading" secondItem="H6J-4t-Fb5" secondAttribute="leading" constant="20" id="cvN-bc-rcP"/>
+                <constraint firstItem="bIa-nW-dla" firstAttribute="leading" secondItem="H6J-4t-Fb5" secondAttribute="leading" constant="20" id="fNs-YQ-vTQ"/>
                 <constraint firstItem="IFh-zA-Ru5" firstAttribute="leading" secondItem="H6J-4t-Fb5" secondAttribute="leading" constant="20" id="fss-9P-HkC"/>
                 <constraint firstAttribute="trailing" secondItem="Lnx-Uk-wJv" secondAttribute="trailing" constant="20" id="gg9-Bw-MTY"/>
                 <constraint firstItem="Lnx-Uk-wJv" firstAttribute="leading" secondItem="H6J-4t-Fb5" secondAttribute="leading" constant="20" id="gug-1p-aY5"/>
@@ -156,6 +233,9 @@
         </namedColor>
         <namedColor name="TextFieldBgColor">
             <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YellowThemeColor">
+            <color red="0.96899998188018799" green="0.95300000905990601" blue="0.85100001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
