--- a/WingMate_iOS/Storyboards/Base.lproj/Main.storyboard
+++ b/WingMate_iOS/Storyboards/Base.lproj/Main.storyboard
@@ -855,6 +855,9 @@
                                                 <state key="normal" title="Notification">
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="gotoNotifications:" destination="5dY-Ne-mfy" eventType="touchUpInside" id="stq-KQ-WHb"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xw-Lv-xn7">
                                                 <rect key="frame" x="16" y="416" width="382" height="1"/>
@@ -1113,7 +1116,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Terms And Condition" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ppd-Cy-yk9">
-                                <rect key="frame" x="16" y="196" width="280" height="48"/>
+                                <rect key="frame" x="16" y="196" width="280" height="47.5"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1126,7 +1129,7 @@
                                 </constraints>
                             </imageView>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wot-Xb-rB9">
-                                <rect key="frame" x="16" y="264" width="382" height="598"/>
+                                <rect key="frame" x="16" y="263.5" width="382" height="598.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -1821,7 +1824,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Privacy Policy" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBe-7T-g99">
-                                <rect key="frame" x="16" y="196" width="188" height="48"/>
+                                <rect key="frame" x="16" y="196" width="188" height="47.5"/>
                                 <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1834,7 +1837,7 @@
                                 </constraints>
                             </imageView>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDW-iq-dJ1">
-                                <rect key="frame" x="16" y="264" width="382" height="598"/>
+                                <rect key="frame" x="16" y="263.5" width="382" height="598.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -1862,6 +1865,128 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nwk-37-bWx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2775" y="848"/>
+        </scene>
+        <!--Notifications SettingsVC-->
+        <scene sceneID="WhS-AJ-QVi">
+            <objects>
+                <viewController storyboardIdentifier="NotificationsSettingsVC" id="yFC-T4-uOv" customClass="NotificationsSettingsVC" customModule="WingMate_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fXz-yP-WVL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notification Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VTU-hK-ES0">
+                                <rect key="frame" x="16" y="196" width="271.5" height="35"/>
+                                <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="7OV-6s-hVM">
+                                <rect key="frame" x="16" y="104" width="72" height="72"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="72" id="7Gu-Ed-5wY"/>
+                                    <constraint firstAttribute="height" constant="72" id="x7k-13-bAS"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notification alert" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Yn-6m-I8I">
+                                <rect key="frame" x="16" y="301" width="215" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="sCz-m6-eS7"/>
+                                    <constraint firstAttribute="width" constant="215" id="tLS-xt-V4q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XUh-jW-8Qy">
+                                <rect key="frame" x="351" y="309" width="49" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="47" id="bUq-va-hQo"/>
+                                    <constraint firstAttribute="height" constant="31" id="iHb-9t-0Jg"/>
+                                </constraints>
+                                <color key="onTintColor" name="RedThemeColor"/>
+                                <connections>
+                                    <action selector="allNotification:" destination="yFC-T4-uOv" eventType="valueChanged" id="uNe-MS-2yh"/>
+                                </connections>
+                            </switch>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ND7-6q-eOc">
+                                <rect key="frame" x="16" y="350" width="382" height="1"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="Nb0-NA-nyZ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cz7-Qe-zT1">
+                                <rect key="frame" x="16" y="433" width="382" height="1"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="9A9-Cb-iN2"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive chat notification  " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfL-aR-VPR">
+                                <rect key="frame" x="16" y="402" width="215" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Bkn-qw-MJZ"/>
+                                    <constraint firstAttribute="width" constant="215" id="GJK-oE-Zae"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chat notification" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fzt-hl-P0f">
+                                <rect key="frame" x="16" y="371" width="215" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="215" id="11W-7Y-asz"/>
+                                    <constraint firstAttribute="height" constant="21" id="9vl-8P-3NI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y29-ih-he2">
+                                <rect key="frame" x="351" y="382" width="49" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="0l9-kD-667"/>
+                                    <constraint firstAttribute="width" constant="47" id="NWW-50-8pc"/>
+                                </constraints>
+                                <color key="onTintColor" name="RedThemeColor"/>
+                                <connections>
+                                    <action selector="chatNotifications:" destination="yFC-T4-uOv" eventType="valueChanged" id="3n6-QP-KTy"/>
+                                </connections>
+                            </switch>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="o0u-mO-bxY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="o0u-mO-bxY" firstAttribute="trailing" secondItem="y29-ih-he2" secondAttribute="trailing" constant="16" id="0y5-AG-MdL"/>
+                            <constraint firstItem="o0u-mO-bxY" firstAttribute="trailing" secondItem="Cz7-Qe-zT1" secondAttribute="trailing" constant="16" id="3mq-dh-n1u"/>
+                            <constraint firstItem="o0u-mO-bxY" firstAttribute="trailing" secondItem="ND7-6q-eOc" secondAttribute="trailing" constant="16" id="4VE-cp-7rU"/>
+                            <constraint firstItem="VTU-hK-ES0" firstAttribute="top" secondItem="7OV-6s-hVM" secondAttribute="bottom" constant="20" id="5KB-8u-Ybt"/>
+                            <constraint firstItem="ND7-6q-eOc" firstAttribute="top" secondItem="XUh-jW-8Qy" secondAttribute="bottom" constant="10" id="69Y-Ip-uUk"/>
+                            <constraint firstItem="y29-ih-he2" firstAttribute="top" secondItem="ND7-6q-eOc" secondAttribute="bottom" constant="31" id="8B8-sb-NgA"/>
+                            <constraint firstItem="XUh-jW-8Qy" firstAttribute="top" secondItem="o0u-mO-bxY" secondAttribute="top" constant="265" id="AuA-yl-hEF"/>
+                            <constraint firstItem="0Yn-6m-I8I" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="B6W-hk-OJ0"/>
+                            <constraint firstItem="7OV-6s-hVM" firstAttribute="top" secondItem="o0u-mO-bxY" secondAttribute="top" constant="60" id="COY-eN-XbL"/>
+                            <constraint firstItem="0Yn-6m-I8I" firstAttribute="top" secondItem="VTU-hK-ES0" secondAttribute="bottom" constant="70" id="CPk-Qo-Vod"/>
+                            <constraint firstItem="7OV-6s-hVM" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="FBB-CK-dTo"/>
+                            <constraint firstItem="VfL-aR-VPR" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="FMw-vI-txm"/>
+                            <constraint firstItem="VTU-hK-ES0" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="JMP-4P-rev"/>
+                            <constraint firstItem="o0u-mO-bxY" firstAttribute="trailing" secondItem="XUh-jW-8Qy" secondAttribute="trailing" constant="16" id="JoY-QQ-6a4"/>
+                            <constraint firstItem="Cz7-Qe-zT1" firstAttribute="top" secondItem="VfL-aR-VPR" secondAttribute="bottom" constant="10" id="JzZ-0O-0hL"/>
+                            <constraint firstItem="Cz7-Qe-zT1" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="LKL-Ds-aTv"/>
+                            <constraint firstItem="VfL-aR-VPR" firstAttribute="top" secondItem="Fzt-hl-P0f" secondAttribute="bottom" constant="10" id="ZI2-V5-EWC"/>
+                            <constraint firstItem="ND7-6q-eOc" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="jEh-yN-Ug1"/>
+                            <constraint firstItem="Fzt-hl-P0f" firstAttribute="leading" secondItem="o0u-mO-bxY" secondAttribute="leading" constant="16" id="qro-A5-oNG"/>
+                            <constraint firstItem="Fzt-hl-P0f" firstAttribute="top" secondItem="ND7-6q-eOc" secondAttribute="bottom" constant="20" id="s2o-R1-eaH"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="chatNotification" destination="y29-ih-he2" id="eF1-T5-Uhm"/>
+                        <outlet property="notificationAll" destination="XUh-jW-8Qy" id="93J-vv-zDh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cfM-HU-wzw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3447.826086956522" y="847.76785714285711"/>
         </scene>
     </scenes>
     <resources>
